--- a/WhiteLagoon.web/appsettings.json
+++ b/WhiteLagoon.web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaltConnection": "server=SAMEERA\\SQLEXPRESS;Database=WhiteLagoon;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    }
 }
